# aiohttp_server

aiohttp_server/: README.md  pyproject.toml
aiohttp_server/aiohttp_server/: Dockerfile  docker-compose.yml  main.py  requirements.txt
aiohttp_server/aiohttp_server/app/: settings.py
aiohttp_server/aiohttp_server/app/forum/: models.py  routes.py  views.py
aiohttp_server/aiohttp_server/app/store/database/: accessor.py  models.py
aiohttp_server/aiohttp_server/config/: config.yaml
aiohttp_server/aiohttp_server/templates/: index.html
